# accessible-media-converter

./: .gitignore  CLAUDE.md  DOWNACCESS_INTEGRATION.md  README.md  UniversalTranscoder.spec  crash_report.txt  error_log.txt  main.py  pyproject.toml  requirements.txt
core/: __init__.py  announce.py  app_info.py  audio_player.py  batch_manager.py  conversion.py  cue.py  debug_session.py  documentation.py  error_report.py  ffmpeg_helpers.py  formatting.py  i18n.py  logger.py  merge.py  metadata_edit.py  metadata_retag.py  presets.py  probe.py  segments.py  speech.py  support.py  track_settings.py  updater.py
docs/: codex-context.md
installer/: UniversalTranscoder.iss
locales/: base.pot
release-notes/: v1.10.0.en.md  v1.10.0.fr.md  v1.10.1.en.md  v1.10.1.fr.md  v1.10.2.en.md  v1.10.2.fr.md  v1.11.0.en.md  v1.11.0.fr.md  v1.12.0.en.md  v1.12.0.fr.md  v1.13.0.en.md  v1.13.0.fr.md  v1.14.0.en.md  v1.14.0.fr.md  v1.15.0.en.md  v1.15.0.fr.md  v1.16.0.en.md  v1.16.0.fr.md  v1.17.0-rc1.en.md  v1.17.0-rc1.fr.md  v1.17.0-rc2.en.md  v1.17.0-rc2.fr.md  v1.17.0.en.md  v1.17.0.fr.md  v1.18.0.en.md  v1.18.0.fr.md  v1.19.0.en.md  v1.19.0.fr.md  v1.20.0-rc1.en.md  v1.20.0-rc1.fr.md  v1.7.0.md  v1.7.1.md  v1.7.2.md  v1.8.0.en.md  v1.8.0.fr.md  v1.8.1.en.md  v1.8.1.fr.md  v1.9.0.en.md  v1.9.0.fr.md  v1.9.1.en.md  (+9 more)
scripts/: build_release.ps1  manage_i18n.py  update_embedded_ffmpeg.ps1
ui/: announcement_dialog.py  error_report_dialog.py  main_window.py  metadata_editor.py  preferences_dialog.py  presets_dialog.py  segment_editor.py  settings_dialog.py  support_dialog.py  (+2 more)
(+26 files in other folders)
